<resources>
    <string name="app_name">Seromatch</string>
    <string name="my_profile">My Profile</string>
    <string name="match">Match</string>
    <string name="settings">Settings</string>
    <string name="radius">Radius: </string>
    <string name="day_from_testing">Months From Last Test</string>
    <string name="age">Minimum Age</string>
    <string name="seen_on_seromatch">Seen on SeroMatch</string>
    <string name="username">Username:</string>
    <string name="notification">Notifications for:</string>
    <string name="new_match">New Match</string>
    <string name="messages">Messages</string>
    <string name="message_like">Liked Message</string>
    <string name="in_app_vibrate">In-App Vibrate</string>
    <string name="in_app_sound">In-App Sound</string>
    <string name="feed_test">My Feed</string>
    <string name="my_groups">My Groups</string>
    <string name="my_events">My Events</string>
    <string name="my_matches">Press to start</string>
    <string name="my_messages">My Messages</string>
    <string name="my_account">My Account</string>
    <string name="profiles">Profiles</string>
    <string name="search_button">Search Button</string>
    <string name="back_button">Back Button</string>
    <string name="seromatch">SeroMatch</string>
    <string name="user_name_hint">User Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="show_password">Show Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="tap_anywhere_to_begin">Tap Anywhere To Begin</string>
    <string name="match_pics">Match Pics</string>
    <string name="message_title">Messages</string>
    <string name="out_of_matches">Swipe down to get more matches</string>
    <string name="miles">Miles</string>
    <string name="min_start_age">18</string>
    <string name="max_age">100</string>
    <string name="to"> to </string>
    <string name="maximum_age">Maximum Age</string>
    <string-array name="distance_in_miles">
        <item>20 Miles</item>
        <item>30 Miles</item>
        <item>40 Miles</item>
    </string-array>
    <string-array name="testing_range">
        <item>3 Months</item>
        <item>6 Months</item>
        <item>12 Months</item>
    </string-array>
</resources>
