<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:textSize="30sp"
        android:contentDescription="Seromatch"
        android:src="@drawable/seromatch" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_hint"
        android:id="@+id/username"
        android:layout_marginTop="50dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="showPassword"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:onClick="login"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp"
        android:textSize="20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:onClick="signUp (Login)" />
</LinearLayout>